--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:gravity="center|top"
     android:padding="16dp"
-    tools:context=".SecondFragment">
+    tools:context=".ui.SecondFragment">
 
     <TextView
         android:id="@+id/tv_first"
