--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.example.lovecalculator.MainFragment"
+        android:name="com.example.lovecalculator.ui.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main">
         <action
@@ -16,13 +16,13 @@
     </fragment>
     <fragment
         android:id="@+id/secondFragment"
-        android:name="com.example.lovecalculator.SecondFragment"
+        android:name="com.example.lovecalculator.ui.SecondFragment"
         android:label="fragment_second"
         tools:layout="@layout/fragment_second">
 
         <argument
             android:name="loveModel"
-            app:argType="com.example.lovecalculator.LoveModel" />
+            app:argType="com.example.lovecalculator.model.LoveModel" />
 
     </fragment>
 </navigation>
