--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -48,4 +48,11 @@
         android:text="result"
         android:textSize="30sp"/>
 
+    <Button
+        android:id="@+id/btn_history"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="History"
+        android:textSize="30sp"/>
+
 </LinearLayout>
